--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -23,6 +23,16 @@
 @import 'templates/branches'
 /* стили секции филиалы*/
 @import 'templates/footer'
-/* стили секции филиалы*/
+/* стили футера*/
+@import 'templates/blocks'
+/* стили футера*/
+@import 'templates/statistics'
+/* стили футера*/
+@import 'templates/news'
+/* стили футера*/
+@import 'templates/page'
+/* стили футера*/
+@import 'templates/modal'
+/* стили модального окна*/
 @import 'media'
 /* стили адаптива */
