--- a/src/sass/templates/_abonnement.sass
+++ b/src/sass/templates/_abonnement.sass
@@ -1,17 +1,21 @@
 .abonnement
-  padding-top: 50px
+  padding-top: 29px
   padding-bottom: 50px
   background-color: #f2f8f9;
-  
+  &__title
+    margin-top: 3px
+    margin-bottom: 0
   &__row
     justify-content: center
+  &__icon
+    margin-top: 0.5rem;
     
   &__subscription
     margin-right: 2rem
     &:last-child
       margin-right: 0
 .subscription
-  margin-top: 4rem
+  margin-top: 1.4rem
   text-align: center
   border: 1px solid #67b0bf;
   
