--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -4,6 +4,7 @@
   height: 100%
   display: flex
   flex-direction: column
+  padding-bottom: 15px
   &::before
     content: ''
     position: absolute
@@ -59,7 +60,9 @@
 
 .nav
   display: flex
-  align-items: center
+  margin-bottom: 3px;
+  margin-right: 52px;
+  margin-left: 150px;
   &__item
     margin-right: 1.3rem
     padding-right: 1.08rem
@@ -80,31 +83,48 @@
 
 .logo
   display: flex
-  align-items: center
+  
+  position: relative
   &__city
-    
+    top: 20px
+    position: absolute
     margin-left: 2.3rem
+    padding: 0
+    height: 50px
+    overflow: hidden
     background: none;
     border: 1px solid #fff;
+    border-radius: 40px
     color: $light
     list-style: none
     outline: none;
     cursor: pointer;
-    overflow: hidden;
+    outline: none
     list-style: none;
+    &_footer
+      top: 10px
     li
+      display: flex
+      align-items: center
+      position: relative
+      padding: 9px 15px 11px 17px
       font-size: 15px;
       font-weight: 300;
       line-height: 24px;
       color: $light
-      a
-        text-decoration: none
-        color: $light
+      outline: none
+      &:hover
         
-.show 
-  overflow: visible;
-  height: 120px;
-  border-radius: 0;
+      img
+        margin-right: 15px
+        margin-left: 16px
+    
+.dropdown
+  position: relative 
+.show
+  overflow: visible
+  border-radius: 15px
+  height: 90px
 
 .contacts
   display: flex
@@ -162,4 +182,4 @@
         background-color: $primary
         border: 1px solid $primary
 
-      
+
