--- a/src/sass/_grid.sass
+++ b/src/sass/_grid.sass
@@ -2,6 +2,10 @@
   width: 85%
   max-width: 1140px
   margin: 0 auto
+  &__contacts
+    width: 100%
+    max-width: 1140px
+    margin: 0 auto
 
 .row
   display: flex
