--- a/src/sass/templates/_branches.sass
+++ b/src/sass/templates/_branches.sass
@@ -1,39 +1,252 @@
 
 
 .branches
-  padding-bottom: 67px
+  padding-top: 50px
+  padding-bottom: 48px
+  max-width: 1140px
+  margin: auto
   &__content
     display: flex
     justify-content: center
+    align-items: center
+    position: relative
+    &::before
+      position: absolute
+      content: ''
+      width: 100%
+      height: 78%
+      border: 4px solid $blue
+      margin-bottom: 2.3rem
   &__icon
     margin-bottom: 2rem
-  
+        
+        
+      
+  &-contacts
+    padding: 0
+    padding-bottom: 30px
+  &__title
+    margin-bottom: 0.3rem
+    &_contacts
+      margin-bottom: 2.5rem
+      text-align: left
+      position: relative
+      &:after
+        position: absolute
+        content: ''
+        bottom: -1.5rem
+        left: 3px
+        width: 100%
+        height: 3px
+        background-color: $blue 
+      &_question
+        margin-bottom: 2.5rem
+        text-align: left
+        position: relative
+        &:after
+          position: absolute
+          content: ''
+          bottom: -1rem
+          left: 0
+          width: 25%
+          height: 3px
+          background-color: $blue 
+          
+  &__contacts
+    margin-top: 77px
+    margin-bottom: 27px
+    display: flex
+    justify-content: flex-start
+    position: relative
+    
+  &__map
+    width: 800px
+    height: 400px
+    margin-left: 2rem
+    margin-right: 3rem
+    
+
+    
+    
+  &__col
+    color: #3b3b3b;
+    &_place
+      margin-top: 7px
+      margin-right: 124px
+      display: flex
+      align-items: flex-start
+      flex-basis: 43%
+      font-family: Roboto;
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 24px;
+      &::after
+        display: block
+        
+        margin-right: -80px
+        margin-top: -30px
+        content: ''
+        width: 2px
+        height: 136px
+        background-color: $blue
+        align-self: center
+      
+    &_phone
+      margin-bottom: 0
+      color: #3b3b3b;
+      font-family: Roboto;
+      font-size: 21px;
+      font-weight: 700;
+      line-height: 22px;
+      
+      a
+        color: $blue
+        font-family: Roboto;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 21px;
+        text-decoration: underline;
+     
+      
+        
+     
+     
+    
+    
+  &__item
+    display: flex
+    align-items: center
+    margin-bottom: 22px
+    img
+      margin-right: 17px
+
 .content
   
   &__buttons
+    margin-left: 2rem
     display: flex
     flex-direction: column
     position: relative
+    &_contacts
+      margin-top: 39px;
+      margin-left: 0
+      flex-direction: row
     
 .map
-  width: 800px
-  height: 400px
-  margin-left: 5rem
+  
+  &_contacts
+    width: 1080px!important
+    height: 446px!important
   &-link
+    position: relative
     width: 263px
+    height: 89px
     text-align: left
-    padding: 24px 19px
-    border: 4px solid #28b4d0;
-    margin-bottom: 0.9rem
+    padding: 18px 19px
+    border: 1px solid #28b4d0;
+    background-color: #fff
+    margin-bottom: 1rem
     font-family: Roboto;
     font-size: 16px;
     font-weight: 300;
-    line-height: 20px;
+    line-height: 22px;
+    &:last-child
+      padding: 13px 19px
     &_bold
       font-size: 20px;
       font-weight: 700;
-    &:hover
-      box-shadow: 0 0 9px rgba(0, 0, 0, 0.17);
-      background-color: #ffd801;
-      border: none
+    &_contacts
+      margin-right: 2.2rem
+      padding: 35px 15px
+      width: 263px
+      text-align: center
+      &:last-child
+        margin-right: 0
       
+      &:hover
+        background: $primary
+    &:active
+      
+      border: none
+     
+      background: url('../img/footer/hover.svg') no-repeat center / cover
+      
+      width: 263px
+ 
+    
+      
+.link
+  background-color: #f2f8f9;
+  opacity: 0.8;
+  &__block
+    padding: 23px 0
+  &__text
+    color: #979797;
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 17px;
+    &_active
+      color: #33b7d2;
+      text-decoration: none
+    a
+      color: #979797;
+      color: 
+      font-family: Roboto;
+      font-size: 13px;
+      font-weight: 300;
+      line-height: 17px;
+      &:last-child
+        color: $blue
+    span
+      margin-right: 10px
+      &:first-child
+        text-decoration: underline
+    img
+      margin: 0 0.5rem
+.column
+  display: flex
+  flex-direction: column
+  max-width: 300px
+ 
+  margin-right: 24px
+  &_full
+    
+    display: flex
+    flex-direction: column
+    button
+      margin-left: auto
+      margin-top: 0
+      width: 170px
+  
+.questions__form
+  display: flex
+  justify-content: flex-start
+.form_group
+  display: flex
+  
+#question-user-question
+  padding-left: 10px;
+  padding-top: 20px
+  height: 171px
+  
+  width: 796px
+  
+  border-radius: 0
+  display: flex
+  align-items: flex-start
+.column__full-width
+  margin-left: 20px
+.question
+  padding: 45px
+  padding-top: 24px;
+ 
+  &__input
+    border-radius: 0!important
+    width: 319px
+    height: 53px
+    &-group
+      margin-bottom: 0.7rem
+  &__button
+    margin-top: 0
+    margin-right: 3px
