--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -1,10 +1,11 @@
 .hero
   background-color: #f2f8f9;
+  padding-top: 4rem
   padding-bottom: 50px
   
   &__title
     margin: auto
-    margin-top: 4rem
+   
     color: #3f3f3f
     text-align: center
     font-size: 30px;
@@ -76,7 +77,7 @@
 .description
   margin-top: 2.6rem
   display: flex
-  
+  justify-content: space-between
 
   &__item
     display: flex
@@ -104,6 +105,8 @@
 
   &__opportunity
     margin: 0px auto
+    margin-top: 4px
+    margin-bottom: 3px
     max-width: 351px
     color: #3f3f3f
     font-size: 19px;
@@ -123,8 +126,9 @@
     &_two
       max-width: 575px
       margin-top: 0
-    &:nth-child(1)
       margin-bottom: 10px
+    &:nth-child(1)
+      
     &:nth-child(2)
       margin-top: -1
       margin-bottom: 
