--- a/src/sass/templates/_statistics.sass
+++ b/src/sass/templates/_statistics.sass
@@ -6,23 +6,39 @@
     display: flex
     justify-content: center
     align-items: center
-    margin-top: 16px
+    margin-top: 10px
     margin-bottom: 48px
   &__input
     width: 483px
+    height: 45px
     &-group
       margin-right: 9px
   &__button
-    padding: 18px 25px
+    padding: 13px 23px
+    
+    color: #3f3f3f;
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 22.04px;
 .child
+  margin-bottom: 34px
   &__name
+    margin-top: 0
     list-style: none
+    margin-right: 0px
+    padding-left: 45px
+    &_bold
+      padding-left: 25px
+    
     &_list
       font-family: Roboto;
       font-size: 15px;
       font-weight: 300;
       line-height: 22px;
       color: #3f3f3f;
+      margin-bottom: 11px
+      
       &_bold
         font-weight: 700
 .achievements
@@ -34,24 +50,36 @@
   line-height: 24px;
   border-spacing: 0px;
   border-collapse: collapse
+  width: 100%
   
   td
     position: relative
-    padding-top: 20px
-    padding-bottom: 17px
-    padding-left: 22px
-    padding-right: auto
+    padding-top: 15px
+    padding-bottom: 9px
+    padding-left: 20px
+    
+   
     text-align: left
     border: 1px solid #dee3e4;
+    &:nth-child(1)
+      width: 14.8047%
+    &:nth-child(2)
+      width: 14.736%
+    &:nth-child(3)
+      width: 14.64%
+    &:nth-child(4)
+      width: 17.456%
     &:nth-child(5)
-      padding-right: 40px
+      width: 38.157%
+    &:nth-child(6)
+      display: none
       
   &__title
     text-align: left
     border-spacing: none
     background-color: #28b4d0;
-    padding-top: 20px
-    padding-bottom: 17px
+    padding-top: 15px
+    padding-bottom: 14px
     padding-left: 23px
     font-weight: 400;
     line-height: 24px;
@@ -62,7 +90,7 @@
 .child
   &__list
     display: flex
-  margin-bottom: 42px
+  
 
   
 
